--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@ input, textarea, select, button {width:100%; padding:8px; margin-top:5px; font-s
 
 /* ---------- Hamburger ---------- */
 #hamburger {
-  position:fixed; top:12px; left:12px; font-size:26px; color:green; cursor:pointer; z-index:1000;
+  position:fixed; top:12px; left:12px; font-size:26px; color:green; cursor:pointer; z-index:1001;
 }
 
 /* ---------- Sidebar ---------- */
 #sidebar {
-  position:fixed; left:-220px; top:0; width:220px; height:100%; background:#fff; border-right:1px solid #ddd; display:flex; flex-direction:column; padding-top:20px; transition:0.3s; z-index:999;
+  position:fixed; left:-250px; top:0; width:250px; height:100%; background:#fff; border-right:1px solid #ddd; display:flex; flex-direction:column; padding-top:20px; transition:0.3s; z-index:1000;
   box-shadow:2px 0 10px rgba(0,0,0,0.1);
 }
 #sidebar.show {left:0;}
@@ -38,9 +38,9 @@ input, textarea, select, button {width:100%; padding:8px; margin-top:5px; font-s
   background:none; border:none; margin:15px 10px; cursor:pointer; font-size:20px; display:flex; align-items:center; padding:10px; border-radius:12px;
   transition:0.2s;
 }
-#sidebar button span {margin-left:10px; font-size:16px;}
+#sidebar button span {margin-left:10px; font-size:16px; white-space: nowrap; overflow:hidden; text-overflow:ellipsis;}
 #sidebar button:hover {background:#fffc00; color:#000;}
-#overlay {position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.2); display:none; z-index:998;}
+#overlay {position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.2); display:none; z-index:999;}
 
 /* ---------- Content ---------- */
 #content {
@@ -240,8 +240,9 @@ const overlay = document.getElementById('overlay');
 hamburger.onclick = () => {
   sidebar.classList.toggle('show');
   overlay.style.display = sidebar.classList.contains('show') ? 'block' : 'none';
+  document.getElementById('content').style.marginLeft = sidebar.classList.contains('show') ? '250px' : '0';
 };
-overlay.onclick = () => {sidebar.classList.remove('show'); overlay.style.display='none';};
+overlay.onclick = () => {sidebar.classList.remove('show'); overlay.style.display='none'; document.getElementById('content').style.marginLeft='0';};
 
 // ------------------ Disclaimer ------------------
 document.getElementById('disclaimer-btn').onclick = () => document.getElementById('disclaimer').style.display='none';
@@ -262,14 +263,24 @@ function showSection(id){
   document.querySelectorAll('.generator').forEach(g=>g.style.display='none');
   document.getElementById(id).style.display='block';
   sidebar.classList.remove('show'); overlay.style.display='none';
+  document.getElementById('content').style.marginLeft='0';
 }
 showSection('dashboard');
+
+// ------------------ Language Buttons ------------------
+document.querySelectorAll('.lang-btn').forEach(btn => {
+  btn.onclick = () => btn.classList.toggle('selected');
+});
 
 // ------------------ Dummy Generators ------------------
 function generateCaption(){
   const topic=document.getElementById('caption-topic').value||'Food';
-  document.getElementById('caption-output').innerHTML=`
-    <p>"Delicious vibes only! 🍴 #${topic}" <div class='copy-btn' onclick='copyText(this)'>Copy</div></p>`;
+  const langs = Array.from(document.querySelectorAll('.lang-btn.selected')).map(b=>b.dataset.lang);
+  let output = '';
+  langs.forEach(lang => {
+    output += `<p>${lang}: "Delicious vibes only! 🍴 #${topic}" <div class='copy-btn' onclick='copyText(this)'>Copy</div></p>`;
+  });
+  document.getElementById('caption-output').innerHTML=output;
 }
 function generateMeme(){
   document.getElementById('meme-output').innerHTML=`<p>When you realize weekend is over 😭 <div class='copy-btn' onclick='copyText(this)'>Copy</div></p>`;
